homework/7.advanced-abstractions/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prometheus
spec:
  serviceName: prometheus
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      serviceAccount: prometheus
      terminationGracePeriodSeconds: 10
      containers:
        - name: prometheus
          image: prom/prometheus:v2.19.2
          ports:
            - protocol: TCP
              containerPort: 9090
          imagePullPolicy: Always
          volumeMounts:
            - name: config-volume
              mountPath: /etc/prometheus/
            - name: data
              mountPath: /prometheus/
      volumes:
        - name: config-volume
          configMap:
            name: my-configmap
        - name: data
          persistentVolumeClaim:
            claimName: prometheus
